Add iconfile to prevent ios app icon loading issue

--- a/app/settings.json
+++ b/app/settings.json
@@ -2,6 +2,7 @@
     "appname" : "myapp",
     "appport" : "5006",
     "mode" : "window",
+    "iconfile" : "neutralino.png",
     "window" : {
         "width" : "1000",
         "height" : "700",
